--- a/SliideTest/src/main/res/layout/row_user.xml
+++ b/SliideTest/src/main/res/layout/row_user.xml
@@ -40,4 +40,15 @@
         app:layout_constraintTop_toBottomOf="@+id/mail"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/gender"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_male"
+        android:layout_margin="16dp"
+        app:tintMode="src_atop"
+        android:tint="?attr/colorPrimary"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
