--- a/SliideTest/src/main/res/values/colors.xml
+++ b/SliideTest/src/main/res/values/colors.xml
@@ -3,17 +3,17 @@
 
     <!-- Light Theme -->
 
-    <color name="brandPrimaryBase">#765EAA</color>
-    <color name="brandPrimaryLight">#FFE8E2</color>
-    <color name="brandPrimaryDark">#573C93</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="coreBackground">#FAFAFA</color>
+    <color name="brandPrimaryBase">#453233</color>
+    <color name="brandPrimaryLight">#FBF8F0</color>
+    <color name="brandPrimaryDark">#271D1D</color>
+    <color name="colorAccent">#323D45</color>
+    <color name="coreBackground">#FBF8F0</color>
 
     <!-- Common -->
     <color name="coreTextDark">#3E3E3E</color>
     <color name="coreTextDarkWithAlpha">#b33e3e3e</color>
     <color name="coreTextEnabled">#747474</color>
-    <color name="coreTextLight">#EAEAEA</color>
+    <color name="coreTextLight">#FEFBFA</color>
     <color name="indicatorSelectedColor">#747474</color>
     <color name="indicatorUnselectedColor">#D8D8D8</color>
     <color name="track_inactive_color">#EAEAEA</color>
